[add] 스크랩뷰 string 리소스 추가

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Myhouse_AOS</string>
+
+    <!--  scrap  -->
+    <string name="scrap_title">스크랩북</string>
+    <string name="scrap_edit">편집</string>
+    <string name="scrap_nickname">nickname</string>
 </resources>
