--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
+    <!--  scrap complete snackbar  -->
     <string name="app_name">Myhouse_AOS</string>
+    <string name="scrap_snackbar_title">스크랩했습니다.</string>
+    <string name="scrap_scankbar_show_scrapbook">스크랩북 보기</string>
+    <string name="scrap_snackbar_put_folder">폴더에 담기</string>
 </resources>
