[mod] 변수명 camel case로 수정, 기타 코드 수

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,4 +36,7 @@
     <string name="scrap_title">스크랩북</string>
     <string name="scrap_edit">편집</string>
     <string name="scrap_nickname">nickname</string>
+    <string name="scraped">스크랩했습니다.</string>
+    <string name="btn_folder">폴더에 담기</string>
+    <string name="btn_scrapbook">스크랩북 보기</string>
 </resources>
