[feat] 스크랩하기 api 구현

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -74,4 +74,5 @@
     <string name="tv_btsheet_2">내 취향 인테리어</string>
     <string name="tv_btsheet_3">친구 집들이 선물</string>
     <string name="tv_btsheet_4">인테리어 꿀팁 모음</string>
+    <string name="tofolder">폴더로 이동했습니다.</string>
 </resources>
